(#501) Fix .hidden target in footer collapse

--- a/packages/ncids-css/scss/components/usa-footer/internal/_nci-big.scss
+++ b/packages/ncids-css/scss/components/usa-footer/internal/_nci-big.scss
@@ -146,7 +146,7 @@
 				&__primary-content {
 					border-top-color: color('black');
 
-					&--collapsible.hidden .usa-list--unstyled {
+					&--collapsible .usa-list--unstyled.hidden  {
 						display: none;
 
 						@include at-media('mobile-lg') {
